@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020200909"
-#define public MagickPackageReleaseDate "snapshot-20200909"
+#define public MagickPackageVersionAddendum ".020200913"
+#define public MagickPackageReleaseDate "snapshot-20200913"
